2005-03-31  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsBSDDB.py (upgrade): Delegate particular versioned
	upgrades to separate methods; provide upgrade_5 method.
	* src/RelLib.py: Remove place from MediaObjects; minor improvements.
	* src/SourceView.py (button_press): Proper selection on double-click.
	* src/plugins/Check.py (check_for_broken_family_links): Typo.

2005-03-31  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* plugins/TestcaseGenerator.py: Added a dialog to specify what is to be generated
	and a ProgressBar. Enhanced family tree generation and randomized names a little more.
	You can now generate thousands of people :-)

2005-03-31  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/stock_link.png: added icon for scratchpad display
	* src/DdTargets.py (all_text): new method to return all text ddtypes
	* src/TreeTips.py (__treetip_show): added support for tips to be callable
	methods so that tips can be generated on the fly.
	* src/plugins/Makefile.am: added stock_link.png icon
	* src/plugins/ScratchPad.py: almost complete rewrite to make proper use
	of gtk widgets and make more flexible for adding support for new 
	dnd object types. Added link icon if the object is a link to a primary
	object.
	
2005-03-30  Don Allingham  <don@gramps-project.org>
	* src/MergePeople.py: provide more date in compare window, fix event
	merging for families. Copy alternate names.
	* src/plugins/Merge.py: support for new merge technique
	* src/PeopleView.py: divide rebuild_data into two functions
	* src/PeopleModel.py: clean up insertion functions
	* src/gramps_main.py: remove unused code

2005-03-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* plugins/TestcaseGenerator.py: Added some more testcases of invalid relations
	* plugins/Check.py: Added some comments an handling for some more invalid references

2005-03-29  Don Allingham  <don@gramps-project.org>
	* src/ReadXML.py: handle date object on names
	* src/gramps.glade: add menu items for merging